--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "eslint-config-prettier": "^6.12.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-styled-components": "^1.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
